hphp/hack/test/typecheck/foreach_vector.php.exp
File "foreach_vector.php", line 21, characters 10-17:
Typing error (Typing[4110])
File "foreach_vector.php", line 21, characters 10-13:
This is a num (int/float) because this is used in an arithmetic operation
File "foreach_vector.php", line 18, characters 19-21:
It is incompatible with an object of type Foo
File "hhi_lib__srcs/collections/Vector.hhi", line 48, characters 49-50:
  via this generic Tv
File "hhi_lib__srcs/collections/interfaces.hhi", line 575, characters 49-50:
  via this generic Tv
File "hhi_lib__srcs/collections/interfaces.hhi", line 300, characters 61-62:
  via this generic Tv
File "hhi_lib__srcs/rx/interfaces.hhi", line 415, characters 36-37:
  via this generic Tv
File "hhi_lib__srcs/rx/interfaces.hhi", line 35, characters 33-34:
  via this generic Tv
File "hhi_lib__srcs/rx/interfaces.hhi", line 26, characters 49-50:
  via this generic Tv
